...
            android:text="@string/title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createsourcetitle" />

        <EditText
            android:id="@+id/sourcetitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{source.title}"
...
            android:text="@string/source_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourcetitletext" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sourcetypes"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourcetypelabel" />

        <Button
            android:id="@+id/sourcecreatorbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_add"
            style="@style/menuTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
