<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <data>
        <variable name="spell"
            type="com.example.starsign.network.NetworkMagic"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70ADD9">

        <EditText
            android:id="@+id/spelltitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Put the title of your spell here"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{spell.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spelltext"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/spelltext"
            android:layout_width="85dp"
            android:layout_height="18dp"
            android:text="@string/spell_creator_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/spelltypelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spelltype_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spelltitletext" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spelltypelabel">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/spellspeciesoptions"
                android:layout_width="100dp"
                android:layout_height="150dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/manacostlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/mana_cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spelltypelabel"
            app:layout_constraintTop_toBottomOf="@+id/spelltitletext" />

        <Button
            android:id="@+id/addspellbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/spell_add"
            style="@style/menuTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/magiceffectlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spell_effect"
            app:layout_constraintEnd_toStartOf="@+id/spelltypelabel"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spelltitletext" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/effectspells"
            android:layout_width="100dp"
            android:layout_height="500dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/magiceffectlabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/manacost"
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toEndOf="@+id/radioGroup2"
            app:layout_constraintTop_toBottomOf="@+id/manacostlabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>