<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
<data>
    <variable
        name="spellspecie"
        type="com.example.starsign.database.SpellSpecies"/>
    <variable
        name="clickListener"
        type="com.example.starsign.cardformulars.SpellSpeciesListener"/>
</data>
    <RadioButton
        android:id="@+id/spellitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{spellspecie.toString()}"
        android:onClick="@{() -> clickListener.onClick(spellspecie)}"/>
</layout>